fixed tests and an overflow problem

--- a/app/app.css
+++ b/app/app.css
@@ -335,3 +335,6 @@ input.ng-invalid {
 .longLatForm > p{
     padding-left: 0.5%;
 }
+p{
+    overflow: auto;
+}
